assets/css/style.css
/* Google fonts import */
@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');

/* CSS Variables */
:root {
    --primary-font: "Playfair Display", serif;
    --secondary-font: "Great Vibes", cursive;
    --primary-color-base: #966919; /* Deep Golden Brown */
    --primary-color-light: #C1A272; /* Light Golden Brown */
    --secondary-color-base: #B5D5C6; /* Soft Botanical Green   */
    --secondary-color-dark: #8EBFAE; /* Muted Botanical Green   */
    --accent-color-base: #A83246; /* Cherry Red */
    --neutral-color-light: #FFFFFF; /*White*/
    --neutral-color-dark: #2F2F2F; /* Charcoal Grey */
    --neutral-color-soft: #F2F2F2; /* Soft Grey */

    /* Primary – Golden Brown Soft Equivalents */
    --primary-color-base-soft: #D9CDBF;   /* Deep Golden Brown Soft */
    --primary-color-light-soft: #E6DCCF;  /* Light Golden Brown Soft */

    /* Secondary – Botanical Green Soft Equivalents */
    --secondary-color-base-soft: #E2EEE9; /* Soft Botanical Green Soft */
    --secondary-color-dark-soft: #D7E7E2; /* Muted Botanical Green Soft */

    /* Accent – Cherry Red Soft Equivalent */
    --accent-color-base-soft: #E3C5CC;    /* Cherry Red Soft */
}

/* Global Styles */

body{
    font-family: var(--primary-font);
    /* background-color: #FFFFFF; */
    color: var(--neutral-color-dark);
}


h1{
   font-family: var(--secondary-font);
   color: var(--primary-color-base);
}

/* h1, */
h2{
    text-transform: uppercase;
}

h2{
    margin-bottom: 2rem;
    color: var(--primary-color-base);
}

.sub-heading-color{
    color: var(--secondary-color-base);
}

.section {
    margin-top: 2rem;
    margin-bottom: 2rem;
}

.bg-color-green{
    background-color: rgba(181, 213, 198, 0.35);
}

.bg-color-brown{
    background-color: rgba(150, 105, 25, 0.35) ;
}

/* Buttons */
.custom-cta-button{
    border: 2px solid var(--accent-color-base);
    background-color: var(--accent-color-base);
    color: white;
}

.custom-cta-button:hover{
    border: 2px solid rgba(168, 50, 70, 0.35);
    background-color: rgba(168, 50, 70, 0.55);
    color: white;
}

/* Navbar */
#navbar{
    background-color: var(--primary-color-light);
}

#nav-logo{
    height: 40px;
    width: auto;
}   

/* .navbar-brand{
    font-family: var(--secondary-font);
} */


/* Home Page */
/*  Header */

.hero {
    height: 100vh; /*full screen height */
    /* width: 100%; */
    background-image: url('../images/hero-image.png');
    background-size: cover; /* makes image cover the whole hero */
    background-position: center;
    background-repeat: no-repeat;
    /* display: flex;
    align-items: center; */
}

.hero-container{
    background-color: #F2F2F2;
    background-color: rgba(242, 242, 242, 0.5);
    width: 40%;
    height: auto;
    left: 2%;
    top: 5%;
}

.hero-content{
    height: 100%;
    margin: 2rem 0;
}

/* Featured Items section */

.swiper-wrapper {
  transition-timing-function: ease-in-out !important; /*makes transition more like a bootstrap carousel*/
}

.expanding-img {
  width: 100%;
  aspect-ratio: 1 / 1;   /* forces a perfect square */
  object-fit: cover;      /* crops the image to fill the square */
  object-position: center; /* keeps the crop centered */
  border-radius: 8px;     /* optional, for softer edges */
}

.swiper-button-next,
.swiper-button-prev {
  color: var(--neutral-color-light);
  /* font-size: 20px; */
} 



/* Footer */
#footer{
    background-color: var(--primary-color-light);
    color: white;
    padding-bottom: 3rem;
}

#footer .sub-heading-color{
    color: var(--secondary-color-base);
    color: var(--neutral-color-light);
}



#footer i{
    color: var(--secondary-color-base);
    font-size: 1.2rem;
    margin-right: 15px;
}

#footer .social-links i{
    color: var(--neutral-color-light);
    font-size: 2rem;
    -webkit-transition: color 0.3s ease-in-out;
    transition: color 0.3s ease-in-out;
}

#footer .social-links i:hover{
    color: var(--secondary-color-base);
}

#footer .quick-links li{
    list-style:none;
    -webkit-transition: color 0.3s ease-in-out;
    transition: color 0.3s ease-in-out;
}

#footer .quick-links a{
    color: var(--neutral-color-light);
    text-decoration: none;
}

#footer .quick-links a:hover{
    color: var(--secondary-color-base);
    
}

/* grid visualisation CSS for testing */

/* .container,
.row {
    border: 2px solid black;
}

.col-12 {
    border: 2px solid white;
    background-color: lightgray;
} */

/* Media queries */
/* @media (max-aspect-ratio: 3/4) {
  .hero {
    background-size: contain;
    background-color: #fdf8f2;
    background-repeat: no-repeat;
  }
} */

/* @media (max-height: 700px) {
  .hero {
    height: 80vh;
  }
}

@media (max-height: 550px) {
    .hero {
    height: 65vh;
  }
    
} */

/* Extra small devices (tablets, 576px and below) */
@media screen and (max-width: 576px) {
    .hero-container{
        min-width: 200px;
        
    }
}
/* Extra Large devices ( 1200px and below) */
@media screen and (min-width: 1200px) {
    .hero-container{
        margin: 4rem;
        
    }
}

